apps/production/client-sites/laura-galeano-psicologa/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: laura-galeano-psicologa
  namespace: lulo-demo-landings
  labels:
    app: laura-galeano-psicologa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: laura-galeano-psicologa
  template:
    metadata:
      labels:
        app: laura-galeano-psicologa
        name: laura-galeano-psicologa
    spec:
      containers:
      - name: laura-galeano-psicologa
        image: "registry.yesidlopez.de/laura-galeano-psicologa:v0.0.1" # {"$imagepolicy": "lulo-demo-landings:laura-galeano-psicologa"}
        ports:
        - containerPort: 3000
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 15
          periodSeconds: 20
        resources:
          requests:
            memory: "128Mi"
            cpu: "50m"
          limits:
            memory: "256Mi"
            cpu: "300m"
      imagePullSecrets:
        - name: registry-secret
