apps/production/client-sites/laura-galeano-psicologa/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: laura-galeano-psicologa
  name: laura-galeano-psicologa
  namespace: lulo-demo-landings
spec:
  selector:
    app: laura-galeano-psicologa
  type: ClusterIP
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
