apps/production/client-sites/laura-galeano-psicologa/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: laura-galeano-psicologa
  namespace: lulo-demo-landings
  annotations:
    cert-manager.io/cluster-issuer: luloai-issuer
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    external-dns.alpha.kubernetes.io/target: homelab.luloai.com
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - laura-galeano-psicologa.demo.luloai.com
      secretName: laura-galeano-psicologa-tls
  rules:
    - host: laura-galeano-psicologa.demo.luloai.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: laura-galeano-psicologa
                port:
                  number: 3000
